# Klipper_ToolChanger

./: .gitignore  AGENTS.md  README.md  alignment.py  install.sh  ktcclog.py  pyproject.toml  tool.py  toolgroup.py  toollock.py
config/: SuperSlicer_Custom_Gcode.md  readme.md
config/example_complex/: readme.md  tool_macro.cfg  tools.cfg
config/example_simple/: tools.cfg
docs/: architecture.md
klipper_macros/: M104.cfg  M107.cfg  M109.cfg  M204.cfg
ktcc/: __init__.py  diagnostics.py  ports.py  thermal.py  tools.py
ktcc/config/: __init__.py  normalization.py  resolver.py  schema.py
ktcc/klipper/: __init__.py  composition.py  config.py  persistence.py  runtime.py
ktcc/persistence/: __init__.py  codec.py  service.py
ktcc/profiles/: __init__.py  models.py  service.py  storage.py
ktcc/statistics/: __init__.py  models.py  reporting.py  service.py  storage.py
ktcc/toolchange/: __init__.py  recovery.py  service.py  state.py
tests/: conftest.py  fakes.py  test_alignment.py  test_changer_state.py  test_tool_operations.py
tests/characterization/: test_four_physical_fixture.py  test_package_layout.py  test_public_contract.py  test_removed_features.py
tests/integration/: test_legacy_facade_config.py  test_local_klipper_contract.py
tests/unit/: test_alignment_adapter.py  test_changer_recovery.py  test_config_profiles.py  test_diagnostics_adapter.py  test_klipper_composition.py  test_klipper_config_bridge.py  test_klipper_persistence_adapter.py  test_klipper_runtime_adapters.py  test_ktcclog_config_adapter.py  test_ports_contract.py  test_profile_service.py  (+7 more)
(+6 files in other folders)
