[project]
name = "klipper-toolchanger"
version = "0.0.0"
description = "Klipper ToolChanger extension"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.4,<9",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
pythonpath = ["."]
testpaths = ["tests"]
xfail_strict = true
